--- a/ex03/responsive.html
+++ b/ex03/responsive.html
@@ -3,91 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>Mendeleiev</title>
-	<style>
-	body {
-		margin-left: 0px;
-		margin-right: 0px;
-		margin-bottom: 0px;
-		margin-top: 0px;
-		background-color: grey;
-		font-family: sans-serif;
-	}
-	.title {
-		color: #4fc3f7;
-		text-align: center;
-		font-weight: bold;
-	}
-	.img-comtainer{
-		position: relative;
-		margin-left: -10px;
-		margin-right: -10px;
-		text-align: center;
-		background-color: #B1B1B1;
-	}
-	.img{
-		margin-bottom: -3px;
-		position: relative;
-		width: 20%;
-		height: auto;
-	}
-	table {
-		background-color: white;
-	}
-	td {
-		font-weight: bold;
-		background-color: #B1B1B1;
-		padding: 10px;
-		width: 200px;
-	}
-	.elem {
-		text-align: center;
-		font-size: 24px;
-	}
-	.poids {
-		text-align: right;
-		font-size: 12px;
-	}
-	.num {
-		font-size: 12px;
-		text-align: left;
-	}
-	.other-nonmetals {
-		background-color: #8AC24A;
-	}
-	.alkali-metals {
-		background-color: #FF9800;
-	}
-	.noble-gases {
-		background-color: #03A8F3;
-	}
-	.alkaline-earth-metals {
-		background-color: #FFC106;
-	}
-	.halogens{
-		background-color: #25C4D8;
-	}
-	.metalloids {
-		background-color: #4DB6AC;
-	}
-	.transition-metals{
-		background-color: #C68989;
-	}
-	.lanthanoids {
-		background-color: #F69988;
-	}
-	.post-transition-metals {
-		background-color: #f8bbd0;
-	}
-	.actinoids {
-		background-color: #B39DDB;
-	}
-	#credit{
-		margin-bottom: 10px;
-		float: right;
-		font-family: monospace;
-		font-style: italic;
-	}
-	</style>
+	<link rel="stylesheet" type="text/css" href="responsive.css">
+
 </head>
 <body>
 	<div class="header">
@@ -768,10 +685,6 @@
 					</tr>
 				</table>
 		</div>
-	</div>
-	<div class="footer">
-		<br>
-		<span id="credit">© itonoli- 2017</span>
 	</div>
 </body>
 </html>
