end d00 and start d01

--- a/d00/ex04/menu.html
+++ b/d00/ex04/menu.html
@@ -16,7 +16,7 @@
 		<nav id="menu" align="center">
 			<ul>
 				<li id="first"><a href="#">Menu SNCF</a>
-					<ul>
+					<ul id=toogle>
 						<li><a href="#">Tuna sandwitch</a></li>
 						<li><a href="#">Honney sandwitch</a></li>
 						<li><a href="#">Fish sandwitch</a></li>
