--- a/d00/ex02/doft.html
+++ b/d00/ex02/doft.html
@@ -16,19 +16,19 @@
 			</div>
 		</div>
 		<div class="container" id="sider-left">
-			<img src="./resources/arrow.png">
-			<img src="./resources/main.png">
-			<img id="oeil" src="./resources/oeil.png">
-			<img src="./resources/outil.png">
-			<img src="./resources/chat-icon.png">
+			<img alt="Avancer" title="Avancer" src="./resources/arrow.png">
+			<img alt="Prendre"  title="Prendre" src="./resources/main.png">
+			<img alt="Regarder" title="Regarder" id="oeil" src="./resources/oeil.png">
+			<img alt="Utiliser" title="Utiliser" src="./resources/outil.png">
+			<img alt="Parler" title="Parler" src="./resources/chat-icon.png">
 		</div>
 		<div class="container" id="image">
-			<img src="./resources/cluster.jpg">
+			<img alt="Cluster" title="Cluster" src="./resources/cluster.jpg">
 		</div>
 		<div class="container" id="sider-right">
-			<img id="book" src="./resources/book.png">
-			<img id="towel" src="./resources/towel.png">
-			<div id="wall"></div>
+			<img id="book" src="./resources/book.png" alt="Livre" title="Livre">
+			<img id="towel" src="./resources/towel.png" alt="Towel" title="Towel">
+			<div id="wall" alt="wall" title="wall"></div>
 		</div>
 </div>
 <div class="container" id="input-box">
