--- a/d00/ex02/doft.html
+++ b/d00/ex02/doft.html
@@ -8,7 +8,7 @@
 <body>
 <div class="wraper">
 		<div class="container" id="header">
-			<img id= "search" src="./resources/loupe.png">
+			<img id= "search" alt="loupe" title="loupe" src="./resources/loupe.png">
 			<div class="nav" align="right">
 				<a href="http://www.disney.com"><img id="reload" src="./resources/reload.png" alt="restart" title="Recommencer au début"></a>
 				<br>
